--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
     "element-plus": "^2.7.5",
+    "linkify-html": "^4.1.3",
+    "linkifyjs": "^4.1.3",
     "vue": "^3.2.47"
   },
   "devDependencies": {
