--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "saas_dev": "vite build --mode saas_dev"
   },
   "dependencies": {
+    "@ckeditor/ckeditor5-vue": "^6.0.0",
     "@element-plus/icons-vue": "^2.3.1",
+    "ckeditor5": "^42.0.1",
+    "ckeditor5-premium-features": "^42.0.1",
     "element-plus": "^2.7.5",
     "linkify-html": "^4.1.3",
     "linkifyjs": "^4.1.3",
